Adapt styling, fix footer on mobile, make layouts and fonts responsive

--- a/style.css
+++ b/style.css
@@ -1,126 +1,152 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
-	font-family: 'Quicksand';
-	font-style: normal;
-	font-weight: 400;
-	src: url(../tipApp/fonts/Quicksand-Regular.ttf) format('truetype');
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    src: url(../tipApp/fonts/Quicksand-Regular.ttf) format('truetype');
 }
 
 @font-face {
-	font-family: 'Noto Color Emoji';
-	font-style: normal;
-	font-weight: 400;
-	src: url(../tipApp/fonts/NotoColorEmoji-Regular.ttf) format('truetype');
+    font-family: 'Rubik-Bold';
+    font-style: normal;
+    font-weight: 700;
+    src: url(../tipApp/fonts/Rubik-Bold.ttf) format('truetype');
 }
 
 body {
-	margin: 0;
-	background-color: #006a4e;
-	background-image: linear-gradient(to bottom right, #006a4e, #12362c);
-	background-attachment: fixed;
-	font-family: 'Quicksand', 'Noto Color Emoji', 'Trebuchet MS',
-		Helvetica, sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
+    margin: 0;
+    background-color: #ffffff;
+    font-family: 'Quicksand', 'Trebuchet MS', Helvetica, sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    color: #3c3c3c;
+    min-height: 100vh;
+    min-height: 100dvh;
+    overflow-y: hidden !important;
 }
 
-.header {
-	background-color: rgba(255, 255, 255, 0.1);
-	width: 100%;
-	text-align: center;
-	padding: 2rem;
-	margin-bottom: 2rem;
-	box-shadow: rgba(0, 0, 0, 0.3) 0 4px 12px;
-}
+header {
+    background-color: #8db600;
+    width: 100%;
+    text-align: center;
+    padding: 5%;
+    margin-bottom: 5%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
+    border-bottom: 1px solid #6f9101;
+    color: #1d1d1d;
 
-footer p {
-	font-size: 1rem;
-	opacity: 0.5;
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-}
-
-.wrapper {
-	max-width: 500px;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-input {
-	-webkit-appearance: none !important;
-	-moz-appearance: none !important;
-	appearance: none !important;
-	outline: none;
-	background-color: whitesmoke;
-	max-width: 50%;
-	padding: 1rem;
-	border: 2px solid grey;
-	border-radius: 5%;
-	border-width: 2px;
-	display: block;
-	margin: 1rem;
-}
-
-button {
-	margin: 2rem 0 2rem;
-	background-color: rgba(255, 255, 255, 0.3);
-	border: none;
-	color: #012917;
-	padding: 1rem 2rem;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 5%;
-	display: inline-block;
-	font-size: 1rem;
-	font-weight: 500;
-	cursor: pointer;
-	user-select: none;
-	-webkit-user-select: none;
-	touch-action: manipulation;
-	-webkit-tap-highlight-color: transparent !important;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	outline: none;
-}
-
-button:hover {
-	border: 1px solid white;
-	box-shadow: rgba(0, 0, 0, 0.3) 0 4px 12px;
-	color: whitesmoke;
-}
-
-.hidden {
-	visibility: hidden;
+    @media (width > 480px) {
+        padding: 3%;
+    }
 }
 
 p {
-	font-size: 1.3rem;
-	line-height: 2;
-	margin: 0.5rem;
-	padding: 0 1rem 0 1rem;
-	color: whitesmoke;
-	text-align: center;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    margin-top: 5%;
+    padding: 0 1rem 0 1rem;
+    text-align: center;
+
+    @media (width > 480px) {
+        font-size: 1.3rem;
+        line-height: 1.7;
+    }
+}
+
+.wrapper {
+    max-width: 500px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
-	color: #012917;
-	font-size: 2rem;
+    font-family: 'Rubik-Bold', 'Lucida Sans', 'Lucida Sans Regular',
+        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.8rem;
+
+    @media (width > 480px) {
+        font-size: 2.5rem;
+    }
 }
 
-/* .font-styling {
-	font-family: 'Quicksand', serif, 'Trebuchet MS', Helvetica, sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
-} */
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+footer p {
+    font-size: 1rem;
+    opacity: 0.5;
+}
+
+input {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
+    outline: none;
+    background-color: whitesmoke;
+    max-width: 50%;
+    padding: 4%;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    display: block;
+    margin: 4%;
+}
+
+input:focus::placeholder {
+    color: transparent;
+}
+
+input::placeholder {
+    font-size: 0.8rem;
+    font-family: 'Quicksand', 'Trebuchet MS', Helvetica, sans-serif;
+    color: #3c3c3c;
+}
+
+button {
+    margin: 6% 0;
+    background-color: #8db600;
+    border: none;
+    padding: 4% 8%;
+    font-family: 'Quicksand', 'Trebuchet MS', Helvetica, sans-serif;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 1rem;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    outline: none;
+}
+
+button:hover {
+    border: 1px solid white;
+    box-shadow: rgba(0, 0, 0, 0.3) 0 4px 12px;
+    color: whitesmoke;
+}
+
+.hidden {
+    visibility: hidden;
+}
